--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  responsive_grid_list: ^1.3.0
+  responsive_grid: ^2.1.0
   url_launcher: ^6.1.7
 
 dev_dependencies:
@@ -64,8 +64,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/quibrals-furniture-logo.png
+    - assets/images/carve.jpg
+    - assets/images/dining.jpg
+    - assets/images/gmail-logo.png
     - assets/images/messenger-logo.png
+    - assets/images/mobile-call.png
+    - assets/images/quibrals-furniture-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
