--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   clipboard: ^0.1.3
+  google_maps_flutter: ^2.2.3
+  google_maps_flutter_web: ^0.4.0+5
   responsive_grid: ^2.1.0
   url_launcher: ^6.1.7
 
