--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   clipboard: ^0.1.3
-  google_maps_flutter: ^2.2.3
-  google_maps_flutter_web: ^0.4.0+5
   responsive_grid: ^2.1.0
+  responsive_grid_list: ^1.3.0
   url_launcher: ^6.1.7
 
 dev_dependencies:
@@ -75,7 +74,14 @@ flutter:
     - assets/images/messenger-logo.png
     - assets/images/mobile-call.png
     - assets/images/quibrals-furniture-logo.png
+    - assets/images/youtube-logo.png
 
+    - assets/images/products/0001.jpg
+    - assets/images/products/0002.jpg
+    - assets/images/products/0003.jpg
+    - assets/images/products/0004.jpg
+    - assets/images/products/0005.jpg
+    - assets/images/products/0006.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
